changes at partials/navbar added buttons to login and logout

--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -33,7 +33,7 @@
                         {% endif %}
                         <br>
                         <label for="">E-mail</label>
-                        <input type="text" name="email" id="" class="form-control" placeholder="E-mail ...">
+                        <input type="email" name="email" id="" class="form-control" placeholder="E-mail ...">
                         <br>
                         
                        
