--- a/account/templates/sign_up.html
+++ b/account/templates/sign_up.html
@@ -45,6 +45,10 @@
                                 <input type="password" required name="password_confirm" class="form-control" placeholder="Digite sua senha novamente ..." id="">
                             </div>
                         </div>
+                        <div class="form-check form-switch mt-3">
+                            <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" name="be_patient">
+                            <label class="form-check-label" for="flexSwitchCheckDefault">Ativar para ser um paciente</label>
+                          </div>
                         <br>
 
                         <input type="submit" value="Cadastrar" class="btn btn-success btn-dark-color">
