--- a/doctor/templates/open_schedules.html
+++ b/doctor/templates/open_schedules.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block 'title' %}Open Date {% endblock 'title' %}
 {% block 'head' %}
-    <link rel="stylesheet" href="{% static 'doctor/css/open_s.css' %}">
+    <link rel="stylesheet" href="{% static 'doctor/css/open_schedules.css' %}">
     <!-- <link rel="stylesheet" href="{% static 'users/css/users.css' %}"> -->
     <link rel="stylesheet" href="{% static 'doctor/css/register_doctor.css' %}">
 {% endblock 'head' %}
