added validations at add_document view

--- a/doctor/templates/doctors_medical_appointments.html
+++ b/doctor/templates/doctors_medical_appointments.html
@@ -68,7 +68,7 @@
         </div>
         {% else %}
         <div>
-            <h2 class="text-danger text-center">Não foram encontradas as consultas de hoje</h2>
+            <h2 class="text-danger text-center">Não foram encontradas as consultas para hoje</h2>
         </div>
         {% endif %}
         <hr>
