--- a/patient/templates/home.html
+++ b/patient/templates/home.html
@@ -2,9 +2,8 @@
 {% load static %}
 {% block 'title' %}Home{% endblock 'title' %}
 {% block 'head' %}
-    <link rel="stylesheet" href="{% static 'doctor/css/open_schedule.css' %}">
-    <link rel="stylesheet" href="{% static 'account/css/account.css' %}">
-    <link rel="stylesheet" href="{% static 'doctor/css/register_doctor.css' %}">
+    <!-- <link rel="stylesheet" href="{% static 'account/css/account.css' %}"> -->
+    <!-- <link rel="stylesheet" href="{% static 'doctor/css/register_doctor.css' %}"> -->
     <link rel="stylesheet" href="{% static 'patient/css/home.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 {% endblock 'head' %}
@@ -14,6 +13,11 @@
 {% include "partials/navbar.html" %}
 <br><br>
 <div class="container mb-5">
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert {{message.tags}} text-center">{{message}}</div>
+        {% endfor %}
+    {% endif %}
     <div class="row">
         <div class="col-md-8">
             {% if user.is_authenticated %}
