--- a/doctor/templates/doctors_medical_appointments.html
+++ b/doctor/templates/doctors_medical_appointments.html
@@ -4,10 +4,7 @@
 
 {% block 'head' %}
 
-    <link rel="stylesheet" href="{% static 'doctor/css/open_schedules.css' %}">
-    <link rel="stylesheet" href="{% static 'account/css/account.css' %}">
-    <link rel="stylesheet" href="{% static 'doctor/css/register_doctor.css' %}">
-    <link rel="stylesheet" href="{% static 'patient/css/home.css' %}">
+    <link rel="stylesheet" href="{% static 'general/css/table_medical_appointments.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
 {% endblock 'head' %}
@@ -37,7 +34,7 @@
 
             </div>
             <div class="col-md">
-                <input type="submit" value="Filtrar" class="btn btn-dark-color-outline">
+                <input type="submit" value="Filtrar" class="btn btn-success">
             </div>
         </div>
      </form>
@@ -45,7 +42,8 @@
         <br>
         <h2><span class="color-dark">Hoje</span></h2>
         {% if doctors_medical_appointments_today %}
-        <div class="list-minhas-consultas">
+        <div class="table-medical-appointments">
+            <div class="col-9">
             <table class="table">
                 <thead>
                   <tr>
@@ -64,7 +62,7 @@
                     {% endfor %}
                 </tbody>
               </table>
-
+            </div>
         </div>
         {% else %}
         <div>
@@ -76,25 +74,34 @@
 
         <h2><span class="color-dark">Restantes</span></h2>
         {% if remaining_doctors_medical_appointments %}
-        <div class="list-minhas-consultas">
+        <div class="table-medical-appointments">
+            <div class="col-9">
             <table class="table">
                 <thead>
                   <tr>
                     <th scope="col">Pacientes</th>
                     <th scope="col">Status</th>
                     <th scope="col">Data</th>
+                    <th scope="col">Acções</th>
                   </tr>
                 </thead>
                 <tbody>
                     {% for remaining_doctors_medical_appointment in remaining_doctors_medical_appointments  %}
                         <tr>
-                            <td><a href="{% url 'medical-appointment-doctor-area-view' remaining_doctors_medical_appointment.id%}">{{remaining_doctors_medical_appointment.patient.username}}</a></td>
+                            <td>{{remaining_doctors_medical_appointment.patient.username}}</td>
                             <td>{{remaining_doctors_medical_appointment.get_status_display}}</td>
                             <td>{{remaining_doctors_medical_appointment.open_date.date}}</td>
+                            <td>
+                                <a href="{% url 'medical-appointment-doctor-area-view' remaining_doctors_medical_appointment.id %}">
+                                    <button class="btn">Abrir consulta</button>
+                                </a>
+                                
+                            </td>
                         </tr>
                     {% endfor %}
                 </tbody>
               </table>
+            </div>
         </div>
         {% else %}
         <div>
