--- a/patient/templates/choose_time.html
+++ b/patient/templates/choose_time.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{% static 'doctor/css/open_schedules.css' %}">
     <link rel="stylesheet" href="{% static 'account/css/account.css' %}">
     <link rel="stylesheet" href="{% static 'doctor/css/register_doctor.css' %}">
-    <link rel="stylesheet" href="{% static 'patient/css/home.css' %}">
+    <link rel="stylesheet" href="{% static 'doctor/css/all_doctors.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
 {% endblock 'head' %}
@@ -22,7 +22,7 @@
             <div class="col-md-8">
 
                 <div class="row">
-                    <div class="col-md-3"><img src="{{doctor.profile_picture.url}}" class="foto-perfil-card" alt=""></div>
+                    <div class="col-md-3"><img src="{{doctor.profile_picture.url}}" class="foto-perfil-card" alt="" width="100"></div>
                     <div class="col-md">
                         <p style="font-size: 20px" class="p-bold">Dr(a). {{doctor.doctor_name}} <i class="bi bi-patch-check-fill icon-main"></i></p>
                         <p>{{doctor.description}}</p>
