--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -1,5 +1,4 @@
 {% load static %}
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-color-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'home-view' %}"><img src="{% static 'general/img/logo.png' %}" width="20%"
@@ -41,7 +40,7 @@
         <div class="d-left">
             {% if user.is_authenticated %}
                 <a href="{% url 'logout-view' %}">
-                    <button class="btn btn-danger"><i class="fa-solid fa-delete-left"></i></i> Sair</button>
+                    <button class="btn btn-danger"><i class="fa-solid fa-delete-left"></i> Sair</button>
                 </a>
             {% else %}
                 <a href="{% url 'login-view' %}">
