--- a/templates/static/patient/css/home.css
+++ b/templates/static/patient/css/home.css
@@ -1,104 +1,40 @@
-.especialidades{
-    font-size: 20px;
+.navbar{
+    height: 110px;
+    border-bottom: 14px solid var(--main-color);
+    background-color: white!important;
+    color: #000!important;
+    padding: 2%;
 }
 
-.card-medicos{
-
-    width: 60%;
-    background-color: #EAEAEA;
-    border: 1px solid var(--main-color);
-    padding: 20px;
-
+.navbar .navbar-brand span{
+    font-size: 20pt;
 }
 
-.foto-perfil-card{
-    width: 90px;
-    height: 90px;
-    border-radius: 45px;
-
+.navbar .navbar-items span{
+    border-bottom: 4px solid var(--dark-color);
+}
+.navbar .navbar-items a{
+    color: #000;
+    margin-left: 2%;
+    transition: 0s all;
+}
+.navbar .navbar-items a:hover{
+    border-bottom: 4px solid var(--dark-color);
+    transition: ease-out all .1s; 
+    -moz-transition: ease-in-out all .4s;
+    -webkit-transition: ease-in-out all .4s;
 }
 
-.foto-perfil-card-lg{
-    width: 180px;
-    height: 180px;
-    border-radius: 90px;
-
-}
-
-.bg-main-lembrete{
-
-    background-color: var(--dark-color);
-    padding: 10px;
-    color: white;
-}
-
-.icon-differential{
-    color: var(--contrast-color);
-}
-
-table {
-    border-collapse: collapse !important;
-    width: 100%;
-}
-
-th, td {
-
-    padding: 8px;
-    text-align: center;
-    background-color: #EAEAEA !important;
-}
-
-th {
-    background-color: #EAEAEA;
-}
-
-.link{
-    text-decoration: none;
-}
-
-.today {
-    background-color: var(--dark-color);
-}
-
-.selecionar-dia{
-    width: 100%;
-    background-color: #EAEAEA;
-    box-shadow: 1px 1px 10px gray;
-}
-
-.header-dias{
-    background-color: var(--dark-color);
-    padding: 15px;
-    color: white;
-    text-decoration: none;
-}
-
-.dia-semana{
-    float: right;
-}
-
-.conteudo-data{
-    padding: 15px;
-    color: black;
-}
-
-
-.link:hover{
-    text-decoration: none;
+#slideshow .slide{
+    display: none;  
 } 
 
-.list-minhas-consultas{
-
-    background-color: #EAEAEA;
-
-    padding: 10px;
-
+#slideshow .slide img{
+   width: 100%;
+   height: 100%;
+   position: absolute;
+    
 }
-
-.documentos{
-    background-color: #cfcfcf;
-    color: black;
-    padding: 20px;
-    border-radius: 10px;
-    font-size: 20px;
-}
+#slideshow .slide .active{
+    display: block;
+}  
