--- a/patient/templates/home.html
+++ b/patient/templates/home.html
@@ -2,23 +2,64 @@
 {% load static %}
 {% block 'title' %}Home{% endblock 'title' %}
 {% block 'head' %}
-    <!-- <link rel="stylesheet" href="{% static 'account/css/account.css' %}"> -->
-    <!-- <link rel="stylesheet" href="{% static 'doctor/css/register_doctor.css' %}"> -->
     <link rel="stylesheet" href="{% static 'patient/css/home.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 {% endblock 'head' %}
-
-
 {% block 'content' %}
-{% include "partials/navbar.html" %}
-<br><br>
-<div class="container mb-5">
-    {% if messages %}
-        {% for message in messages %}
-            <div class="alert {{message.tags}} text-center">{{message}}</div>
-        {% endfor %}
-    {% endif %}
 
+<nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="{% url 'home-view' %}">
+            <img src="{% static 'general/img/logo.png' %}"  alt=""><span>HEALING</span>
+        </a>
+        
+        <div class="col-md-4 navbar-items">
+            <a href="{% url 'doctors-view' %}">Doctores</a>
+            <a href="">Contact Us</a>
+            <a href="{% url 'login-view' %}">Login</a>
+        </div>
+    </div>
+</nav>
+
+
+<div id="slideshow" data-component="slideshow">
+    <div role="list">
+        <div class="slide active">
+            <img src="{% static 'patient/img/slide1.jpeg' %}" id="slide-1" alt="">
+        </div>
+        <div class="slide">
+            <img src="{% static 'patient/img/slide2.jpg' %}" id="slide-2" alt="">
+        </div>
+        
+    </div>
 </div>
-
 {% endblock 'content' %}
+{% block 'jsBlock' %}
+
+    <script type="text/javascript">
+        
+        var slideshow = document.querySelectorAll('#slideshow')
+
+        slideshow.forEach(initSlideShow)
+
+        function initSlideShow()
+        {
+            slides = document.querySelectorAll(".slide")
+            var index = 0, timeLeft = 10000
+            $(slides[index]).fadeIn(2000)
+            
+            setInterval(()=>{
+                $(slides[index]).fadeOut()
+                index++
+                if (index === slides.length){
+                    index = 0
+                }
+                $(slides[index]).fadeIn(3000)
+
+            }, timeLeft)
+
+        }
+
+    </script>
+{% endblock 'jsBlock' %}
+<br><br>
