--- a/templates/static/general/css/base.css
+++ b/templates/static/general/css/base.css
@@ -5,7 +5,10 @@
     --contrast-color: #FFD686;
 
 }
+*{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif!important;
 
+}
 .bg-color-dark{
 
     background-color: var(--main-color);
