--- a/doctor/templates/medical_appointment_doctor_area.html
+++ b/doctor/templates/medical_appointment_doctor_area.html
@@ -3,6 +3,7 @@
 {% block 'title' %}Medical appointment D. Area{% endblock 'title' %}
 {% block 'head' %}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+<link rel="stylesheet" href="{% static 'doctor/css/doctors.css' %}">
 {% endblock 'head' %}
 {% block 'content' %}
 {% include "partials/navbar.html" %}
