--- a/patient/templates/medical_appointment.html
+++ b/patient/templates/medical_appointment.html
@@ -32,9 +32,9 @@
             </div>
     {% endif %}
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-9">
             <div class="row">
-                <div class="col-md-3"><img src="{{doctor_data.profile_picture.url}}" class="foto-perfil-card-lg" alt=""></div>
+                <div class="col-md-3"><img src="{{doctor_data.profile_picture.url}}" class="foto-perfil-card-lg" alt="" style="border-radius:120px;"></div>
                 <div class="col-md">
                     <p style="font-size: 20px" class="p-bold">Dr(a). {{doctor_data.doctor_name}} <i
                             class="bi bi-patch-check-fill icon-main"></i></p>
